--- a/4wikijournal.html
+++ b/4wikijournal.html
@@ -5,21 +5,34 @@
 
 ===4.1.1 Phases of cell cycle===
 ;Interphase: cell growth and chromosomal DNA replication. Makes up the majority of the cell cycle duration
-:* ;G1: cell growth pre-replication
-:* ;S-phase: cell becomes committed to and prepares for division. DNA-replication and centrosome replication
-:* ;G2: cell growth after DNA-replication and prior to mitosis
+:* '''G1''': cell growth pre-replication
+:* '''S-phase''': cell becomes committed to and prepares for division. DNA-replication and centrosome replication
+:* '''G2''': cell growth after DNA-replication and prior to mitosis
 
 ;Mitotic phase (M-phase): mitosis and cytokinesis. Actual events of cell division.
-* ;Mitosis (nuclear division)
-:* ;Prophase: nucleolus disappears and chromosomes form from chromatin condensation
-:* ;Pro-metaphase: centrosomes move apart and polarize. Nuclear membrane disappears
-:* ;Metaphase: chromosomes line up along the equator (metaphase plate)
-:* ;Anaphase: centromeres break down and chromosomes separate. Sister chromatids move to opposite poles
-:* ;Telophase: new nuclei re-form
-* ;Cytokinesis (cytoplasmic division)
+* '''Mitosis''' (nuclear division)
+:* '''Prophase''': nucleolus disappears and chromosomes form from chromatin condensation
+:* '''Pro-metaphase''': centrosomes move apart and polarize. Nuclear membrane disappears
+:* '''Metaphase''': chromosomes line up along the equator (metaphase plate)
+:* '''Anaphase''': centromeres break down and chromosomes separate. Sister chromatids move to opposite poles
+:* '''Telophase''': new nuclei re-form
+* '''Cytokinesis''' (cytoplasmic division)
 
-;Resting Phase: an off-cycle phase (or G0 phase)
+;Resting Phase (G0 phase): an off-cycle phase
 
 ===4.1.2 Key players in G1/S transition===
 ;Once going into the S-phase, the cell is committed to divide.
 
+;SBF(transcription factor):
+:* Constituents: Swi4 (DNA-binding) + Swi6
+:* Binds promoter of SCB elements expressed at START
+
+;MBF (transcription factor):
+:* Constituents: Mbp1 (DNA-binding) + Swi6
+:* Binds promoter of MCB elements expressed at START
+
+;Whi5/Nrm1: repress G1/S transition expression by binding Swi6 C-terminus through a conserved '''GTB motif'''.
+
+;Useful links for Mbp1:
+:* [https://pubs.acs.org/doi/10.1021/bi992212i Characterization of DNA-binding domain]
+:* [https://pubs.acs.org/doi/10.1021/bi702339q Thermodynamics of DNA-binding]
