--- a/3wikijournal.html
+++ b/3wikijournal.html
@@ -1,10 +1,41 @@
 =3 Basic Bioinformatics=
+==3.5 Abstractions==
+
+<div class="time-estimate">
+Time estimated: 30 min; taken 35 min; date started: 2019-10-15; date completed: 2019-10-15
+
+~~~~
+</div>
+
+;Motivation:
+:* Making biology "computable". Extract the essential parts and represent them effectively.
+:* Central part in modelling biology
+:* Keep in mind that the abstraction itself is not biology though!
+:* Draw rigorous and potentially powerful and complete conclusions. (re. knot example)
+
+;Elements of modelling biology:
+:* Represent biology as data
+:* Define the rigorous/unambiguous meaning of data
+:* Define operations and algebras with data
+:* Metrics to represent the target properties
+
+;Elements of abstraction:
+:* Define the labels
+:* Structure the relationships between labels (recall normalized data models)
+
+;We make inferences about biology from its model
+
+;Controlled Vocabulary: uniquely defined to represent an item
+
+;Ontology: a set of terms in terms of controlled vocabularies and relationships between them
+:* define the semantics (e.g. "Is a ..." relationship)
+
 ==3.4 MYSPE ==
 
 <div class="time-estimate">
 Time estimated: 1 h; taken 35 min; date started: 2019-10-14; date completed: 2019-10-14
 
-~~~~
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 22:30, 14 October 2019 (EDT)
 </div>
 
 ;Motivation:
@@ -25,7 +56,7 @@ Time estimated: 1 h; taken 35 min; date started: 2019-10-14; date completed: 201
 
 '''''I recently resetted/wiped out my computer so that might be why'''''
 
-~~~~
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 22:30, 14 October 2019 (EDT)
 <div class="mw-collapsible-content">
 <code>
 WARNING: Rtools is required to build R packages but is not currently installed. Please download and install the appropriate version of Rtools before proceeding:
