--- a/4wikijournal.html
+++ b/4wikijournal.html
@@ -1,5 +1,12 @@
 =4 Concepts in Biology=
 ==4.1 Cell Cycle==
+
+<div class="time-estimate">
+Time estimated: 1 h; taken 150 min; date started: 2019-10-10; date completed: 2019-10-12
+
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 17:45, 12 October 2019 (EDT)
+</div>
+
 ;Universally conserved process for cell division involving many regulatory protein machineries.
 :* In fact, they are so highly conserved that many machineries work just fine when expressed in a different species<ref>Molecular Biology of the Cell</ref>
 
