--- a/wikijournal.html
+++ b/wikijournal.html
@@ -10,8 +10,54 @@ Wilson's Journal
 __TOC__
 
 {{Vspace}}
+=5 Protein Structure Models=
+==5.1 Structural Concepts==
+
+<div class="time-estimate">
+Time estimated: 1 h; taken 30 min; date started: 2019-10-15; date completed: 2019-10-15
+
+~~~~
+</div>
+
+===5.1.1 Abstraction and storage===
+;Structures are time-averaged and population-averaged.
+
+;Computable abstraction of structure:
+:* coordinates
+:* chemical types (e.g. atom types)
+
+;Quality metrics:
+:* resolution
+:* R-work, R-free
+:* bond length and angle deviations
+:* coordinate error (e.g. from diffraction data)
+
+;Choosing the right structural model for analyses:
+:* Quality of the dataset (raw data) and model-building (overfitting based on R-ratios)
+:* Method of structure determination
+:* Experimental conditions (native environment?)
+:* Model completeness (fewer missing segments)
+:* When making inferences about related proteins, the sequence similarity is important
+:* Space group and crystal contacts
+:* When analysis pertains to ligand binding, the holo structures would be desirable
+
+===5.1.2 Visualization and interpretation===
+;Types of tructure representation depends on purpose.
+
+;Stereo view! Trick my eyes into seeing 3D with left and right images?
+
+;Interpretation: structure as collection of features
+
+{{Vspace}}
 =4 Concepts in Biology=
 ==4.1 Cell Cycle==
+
+<div class="time-estimate">
+Time estimated: 1 h; taken 150 min; date started: 2019-10-10; date completed: 2019-10-12
+
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 17:45, 12 October 2019 (EDT)
+</div>
+
 ;Universally conserved process for cell division involving many regulatory protein machineries.
 :* In fact, they are so highly conserved that many machineries work just fine when expressed in a different species<ref>Molecular Biology of the Cell</ref>
 
@@ -56,7 +102,7 @@ __TOC__
 <div class="time-estimate">
 Time estimated: 30 min; taken 35 min; date started: 2019-10-15; date completed: 2019-10-15
 
-~~~~
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 11:39, 15 October 2019 (EDT)
 </div>
 
 ;Motivation:
