--- a/3wikijournal.html
+++ b/3wikijournal.html
@@ -4,7 +4,7 @@
 <div class="time-estimate">
 Time estimated: 30 min; taken 35 min; date started: 2019-10-15; date completed: 2019-10-15
 
-~~~~
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 11:39, 15 October 2019 (EDT)
 </div>
 
 ;Motivation:
