--- a/5wikijournal.html
+++ b/5wikijournal.html
@@ -4,7 +4,7 @@
 <div class="time-estimate">
 Time estimated: 1 h; taken 30 min; date started: 2019-10-15; date completed: 2019-10-15
 
-~~~~
+[[User:Zhi Wei Zeng|Zhi Wei Zeng]] ([[User talk:Zhi Wei Zeng|talk]]) 13:10, 15 October 2019 (EDT)
 </div>
 
 ===5.1.1 Abstraction and storage===
