--- a/6wikijournal.html
+++ b/6wikijournal.html
@@ -2,6 +2,12 @@
 ==6.1 Genetic Code==
 ;Objective: use R and the package Biostrings to work with genetic code
 
+<div class="time-estimate">
+Time estimated: 1 h; taken > 3h; date started: 2019-10-15; date completed: 2019-10-16
+
+~~~~
+</div>
+
 ===6.1.1 Preparation: FND-Genetic_code.R===
 
 ;Install BiocManager
@@ -91,6 +97,8 @@ installation path not writeable, unable to update packages: boot, foreign,
 ===6.1.2 Running through FND-Genetic_code.R===
 
 <div class="toccolours mw-collapsible mw-collapsed" style="width:90%; margin-left: 10px; padding-right: 15px">
+
+    
 <div class="mw-collapsible-content">
 <source lang="R">
 #setwd("C:/Users/Wilson/Documents/BCH1441/ABC-units")
